# triple_tris

./: CMakeLists.txt  README.md  trip_tris.cpp  trip_tris.hpp  triple_triangles.cpp
