CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#project name
project(dagmc_preproc)

#direct cmake to other required files
SET ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/cmake)

FIND_PACKAGE(MOAB REQUIRED)

INCLUDE_DIRECTORIES(${MOAB_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR})

SET(SOURCES_FILES triple_triangles.cpp trip_tris.cpp)

SET(CMAKE_INSTALL_PREFIX .)
ADD_EXECUTABLE(triple_triangles ${SOURCES_FILES})
TARGET_LINK_LIBRARIES(triple_triangles ${MOAB_LIBRARIES})

INSTALL(TARGETS triple_triangles DESTINATION .)

